projetGL/src/test/deca/context/invalid/provided/invalide_13_While.deca
// Description : test sur le type de la condition
// Sortie:
//  La condition doit étre de type boolean, mais pas de type int

{
    int x;
    while (x){
        println(10);
    }
}